<resources>
    <string name="app_name">CuriosityApp</string>
    <string name="action_settings">Settings</string>
    <string name="btn_sign_in_with_facebook">Sign In With <b>Facebook</b></string>
    <string name="btn_sign_in_with_google">Sign In  With <b>Google</b> </string>
    <string name="btn_sign_in_with_twitter">Sign In With <b> Twitter</b></string>
    <string name="btn_sign_up_email"><b>Sign Up</b> \n With Email</string>
    <string name="btn_sign_in_email"><b>Sign In</b> \n With Email</string>
</resources>
