<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mayhsupaing.curiosityapp.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/rl_curiosity_homescreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/curiosity_bg_icon">

        <ImageView
            android:id="@+id/iv_curiosity_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/curiosity_logo"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_curiosity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="curiosity"
            android:textSize="25sp"
            android:textColor="@color/accent"
            />



        <Button
            android:id="@+id/btn_log_in_with_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/btn_sign_in_with_facebook"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/icons"
            android:background="@color/primary"
            android:drawableLeft="@drawable/facebook_icon"
            android:drawablePadding="-30dp"

        />

        <Button
            android:id="@+id/btn_log_in_with_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_sign_in_with_google"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/icons"
            android:background="@color/primary_dark"
            android:drawableLeft="@drawable/google_icon"
            android:drawablePadding="-50dp"

            />

        <Button
            android:id="@+id/btn_log_in_with_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_sign_in_with_twitter"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/icons"
            android:background="@color/accent"
            android:drawableLeft="@drawable/twitter_icon"
            android:drawablePadding="-50dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

        <Button
            android:id="@+id/btn_sign_up_with_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/btn_sign_up_email"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/icons"
            android:background="@color/secondary_text"
            android:drawableLeft="@drawable/mail_icon"
            />

        <Button
            android:id="@+id/btn_sign_in_with_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/btn_sign_in_email"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/icons"
            android:background="@color/secondary_text"
            android:drawableLeft="@drawable/mail_icon"
            />


        </LinearLayout>


        <TextView
            android:id="@+id/tv_terms_and_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Terms &amp; Condition and Privacy Policy"
            android:layout_gravity="center"
            android:paddingTop="50dp"
            android:textSize="10sp"
            android:textColor="@color/divider"/>



    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
